# rdc_app

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  agenda.md
.cargo/: config.toml
.kimi/skills/speckit-plan/: SKILL.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  kimi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/desktop-ui/: Cargo.toml
apps/desktop-ui/src/: introspection_bridge.rs  main.rs
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: lib.rs  main.rs  server.rs  ui_server.rs
apps/mcp-server/src/handlers/: breakpoints.rs  execution.rs  inspection.rs  mod.rs  session.rs  ui_inspection.rs
apps/visual-debugger/: Cargo.toml
apps/visual-debugger/src/: address_bar.rs  app.rs  file_tree.rs  main.rs  session_config.rs  source_view.rs  syntax.rs  toolbar.rs
crates/debug-session-view/: Cargo.toml
crates/debug-session-view/src/: action.rs  lib.rs  state.rs  view.rs
crates/debug-target-example/: Cargo.toml
crates/debug-target-example/src/: main.rs
crates/egui-introspection/: Cargo.toml
crates/egui-introspection/src/: context.rs  diff.rs  layout.rs  lib.rs  paint.rs  snapshot.rs  stable_id.rs  ui.rs  widget_node.rs
crates/lldb-bridge/: Cargo.toml
crates/lldb-bridge/src/: client.rs  handle.rs  lib.rs  logging.rs  python_backend.rs  thread.rs  transport.rs
crates/lldb-bridge/tests/: dap_handshake.rs
crates/lldb-native/: Cargo.toml
crates/lldb-native/src/: command.rs  handle.rs  lib.rs  mapping.rs  pdb_resolver.rs  thread.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs
crates/protocol/src/tools/: breakpoints.rs  execution.rs  inspection.rs  mod.rs  session.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: backend.rs  breakpoint.rs  error.rs  event.rs  lib.rs  probe.rs  process.rs  serialization.rs  session.rs  variable.rs
crates/win-debug-bridge/: Cargo.toml
crates/win-debug-bridge/src/: lib.rs  pdb_info.rs  thread.rs  windows_backend.rs
crates/win-debug-bridge/tests/: integration.rs
docs/: codelldb-manual.md  debugger-direto.md  ferramentas-mcp.md  guia-rapido.md  index.md  variaveis-e-probes.md  visual-debugger.md
scripts/: test_dap_flow.py
specs/001-mcp-lldb-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-lldb-bridge/contracts/: mcp-tools.md  variable-serialization.md
specs/002-pdb-stepping-panic/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-pdb-stepping-panic/checklists/: requirements.md
specs/003-egui-introspection/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-egui-introspection/checklists/: requirements.md
specs/003-egui-introspection/contracts/: mcp-ui-tools.md
specs/004-visual-debugger-ui/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-visual-debugger-ui/checklists/: requirements.md
specs/004-visual-debugger-ui/contracts/: toolbar-actions.md
specs/005-lldbsys-replace/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-lldbsys-replace/checklists/: requirements.md
specs/005-lldbsys-replace/contracts/: debug-backend-trait.md
