[workspace]
members = [
    "apps/mcp-server",
    "crates/runtime-core",
    "crates/lldb-bridge",
    "crates/protocol",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["jeanlopes <jeanoliveiralopes@gmail.com>"]

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# errors
thiserror = "2"
# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# ids
uuid = { version = "1", features = ["v4", "serde"] }
# cli
clap = { version = "4", features = ["derive"] }
# mcp — official Rust MCP SDK (check crates.io for latest version)
rmcp = { version = "0.1", features = ["server", "transport-io"] }
# error handling
anyhow = "1"
# python interop (LLDB Python API)
pyo3 = { version = "0.22", features = ["auto-initialize"] }
# internal crates
runtime-core = { path = "crates/runtime-core" }
lldb-bridge = { path = "crates/lldb-bridge" }
protocol = { path = "crates/protocol" }
