[workspace]
members = [
    "apps/mcp-server",
    "apps/desktop-ui",
    "apps/visual-debugger",
    "crates/runtime-core",
    "crates/win-debug-bridge",
    "crates/lldb-bridge",
    "crates/protocol",
    "crates/debug-target-example",
    "crates/egui-introspection",
    "crates/debug-session-view",
    "crates/lldb-native",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["jeanlopes <jeanoliveiralopes@gmail.com>"]

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# errors
thiserror = "2"
# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# ids
uuid = { version = "1", features = ["v4", "serde"] }
# cli
clap = { version = "4", features = ["derive"] }
# mcp — official Rust MCP SDK (check crates.io for latest version)
rmcp = { version = "0.1", features = ["server", "transport-io"] }
# error handling
anyhow = "1"
# ui
egui = { version = "0.29", default-features = false }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui-phosphor = "0.7"
# directory traversal
walkdir = "2"
# native file/folder dialogs
rfd = "0.15"
# internal crates
runtime-core = { path = "crates/runtime-core" }
win-debug-bridge = { path = "crates/win-debug-bridge" }
lldb-bridge = { path = "crates/lldb-bridge" }
protocol = { path = "crates/protocol" }
egui-introspection = { path = "crates/egui-introspection" }
mcp-server = { path = "apps/mcp-server" }
debug-session-view = { path = "crates/debug-session-view" }
