[package]
name = "desktop-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RDC egui desktop application with UI introspection"

[[bin]]
name = "desktop-ui"
path = "src/main.rs"

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
egui-introspection = { workspace = true }
mcp-server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
