[package]
name = "egui-introspection"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Semantic UI tree capture for egui — exposes widget state to AI agents via MCP"

[features]
default = ["introspection"]
introspection = []

[dependencies]
egui = { version = "0.29", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
