[package]
name = "lldb-bridge"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
# internal
runtime-core = { workspace = true }
protocol = { workspace = true }

which = "7"
dirs = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
