[package]
name = "protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP protocol types, tool schemas, and error mapping"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
runtime-core.workspace = true
thiserror.workspace = true
rmcp.workspace = true
