[package]
name = "runtime-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core runtime abstractions: session, entities, serialization, state machine"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync"] }
